Add copyright notice and GNU AGPL note

--- a/src/changelog.html
+++ b/src/changelog.html
@@ -55,5 +55,7 @@
     <p>- first version of the website finalized</p>
     <p>------<br>|<a href="index.html">HOME</a>|<br>------</p>
     <p><a href="https://www.fontsquirrel.com/fonts/BPmono">BPmono</a> © <a href="https://backpacker.gr/">Backpacker</a> 2009 - <a href="https://creativecommons.org/licenses/by-nd/3.0/">CC BY-ND 3.0</a></p>
+    <p>© MymeType 2025 - <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a></p>
+    <p>This website's source code is licensed under the terms of the GNU Affero General Public License v3.0 or later. You can view it <a href="https://codeberg.org/MymeType/personal-website">here</a>.</p>
   </body>
 </html>
