Fix codebase and add restoration notice

--- a/src/gallery.html
+++ b/src/gallery.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>guest@mymetype.gay ~ $</title>
-    <link href="/style.css" rel="stylesheet" type="text/css" media="all">
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link href="style.css" rel="stylesheet" type="text/css" media="all">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
   </head>
   <body>
     <h1>GALLERY</h1>
-    <img src="/images/axel-refsheet.png">
+    <img src="images/axel-refsheet.png">
     <p>refsheet of Axel (my fursona)</p>
-    <img src="/images/axel-hi.png">
+    <img src="images/axel-hi.png">
     <p>Axel saying hi :3</p>
     <p>------<br>|<a href="index.html">HOME</a>|<br>------</p>
     <p><a href="https://www.fontsquirrel.com/fonts/BPmono">BPmono</a> © <a href="https://backpacker.gr/">Backpacker</a> 2009 - <a href="https://creativecommons.org/licenses/by-nd/3.0/">CC BY-ND 3.0</a></p>
