--- a/src/my-works.html
+++ b/src/my-works.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>guest@mymetype.gay ~ $</title>
-    <link href="/style.css" rel="stylesheet" type="text/css" media="all">
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link href="style.css" rel="stylesheet" type="text/css" media="all">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
   </head>
   <body>
     <h1>MY WORKS</h1>
     <h2><a href="https://yume.wiki/2kki/Yume_2kki_Wiki">Yume 2kki</a> (Associate Developer)</h2>
-    <img src="/images/640px-DarkBunker_0.126.png">
+    <img src="images/640px-DarkBunker_0.126.png">
     <p><a href="https://yume.wiki/2kki/Dark_Bunker">Dark Bunker</a></p>
-    <img src="/images/640px-The_pansy_path_A.png">
+    <img src="images/640px-The_pansy_path_A.png">
     <p><a href="https://yume.wiki/2kki/The_Pansy_Path">The Pansy Path</a></p>
-    <img src="/images/Clock_World.png">
+    <img src="images/Clock_World.png">
     <p><a href="https://yume.wiki/2kki/Clock_World">Clock World</a></p>
-    <img src="/images/Restored_Vanta_120.png">
+    <img src="images/Restored_Vanta_120.png">
     <p><a href="https://yume.wiki/2kki/Restored_Vantablack_World">Restored Vantablack World</a></p>
-    <img src="/images/Rainbow_hell.png" width="640px">
+    <img src="images/Rainbow_hell.png" width="640px">
     <p><a href="https://yume.wiki/2kki/Rainbow_Hell">Rainbow Hell</a></p>
     <p>------<br>|<a href="index.html">HOME</a>|<br>------</p>
     <p>© <a href="https://yume.wiki/">YumeWiki</a> 2023, 2024 - <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0</a></p>
