--- a/src/not_found.html
+++ b/src/not_found.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>guest@mymetype.gay ~ $</title>
-    <link href="/style.css" rel="stylesheet" type="text/css" media="all">
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link href="style.css" rel="stylesheet" type="text/css" media="all">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
   </head>
   <body>
     <h1>404 - NOT FOUND</h1>
-    <p>------<br>|<a href="/index.html">HOME</a>|<br>------</p>
+    <p>------<br>|<a href="index.html">HOME</a>|<br>------</p>
     <p><a href="https://www.fontsquirrel.com/fonts/BPmono">BPmono</a> © <a href="https://backpacker.gr/">Backpacker</a> 2009 - <a href="https://creativecommons.org/licenses/by-nd/3.0/">CC BY-ND 3.0</a></p>
     <p>© MymeType 2025 - <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a></p>
     <p>This website's source code is licensed under the terms of the GNU Affero General Public License v3.0 or later. You can view it <a href="https://codeberg.org/MymeType/personal-website">here</a>.</p>
