--- a/src/gallery.html
+++ b/src/gallery.html
@@ -14,8 +14,8 @@
     <img src="images/axel-hi.png">
     <p>Axel saying hi :3</p>
     <p>------<br>|<a href="index.html">HOME</a>|<br>------</p>
-    <p><a href="https://www.fontsquirrel.com/fonts/BPmono">BPmono</a> © <a href="https://backpacker.gr/">Backpacker</a> 2009 - <a href="https://creativecommons.org/licenses/by-nd/3.0/">CC BY-ND 3.0</a></p>
-    <p>© MymeType 2025 - <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a></p>
-    <p>This website's source code is licensed under the terms of the GNU Affero General Public License v3.0 or later. You can view it <a href="https://codeberg.org/MymeType/personal-website">here</a>.</p>
+    <p>Fantasque Sans Mono © Jany Belluz 2013-2016 - <a href="licenses/Fantasque-Sans-Mono/SIL Open Font License.txt"> Open Font License 1.1</a></p>
+    <p>© MymeType 2025 - <a href="licenses/general/CC-BY-SA-4.0">CC BY-SA 4.0</a></p>
+    <p>This website's <a href="https://codeberg.org/MymeType/personal-website">source code</a> is licensed under the terms of the GNU Affero General Public License v3.0 or later. You can view a copy of the license <a href="licenses/general/AGPL-3.0-or-later">here</a>.</p>
   </body>
 </html>
