--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <body>
     <img src="images/axel-mono-head.png" onmouseover="this.src='images/axel-teal-head.png';" onmouseout="this.src='images/axel-mono-head.png';" onclick="this.src='images/axel-teal-head-happy.png';">
     <h1>NOTE: Website has now been temporarily restored until I figure out a new redesign</h1>
-    <h1>MymeType - /maɪmtaɪp/</h1>
+    <h1>MymeType - マイムタイプ - /maɪmtaɪp/</h1>
     <p>---------<br>|<a href="gallery.html">GALLERY</a>|<br>---------</p>
     <p>----------<br>|<a href="my-works.html">MY WORKS</a>|<br>----------</p>
     <p>---------<br>|<a href="socials.html">SOCIALS</a>|<br>---------</p>
@@ -24,11 +24,10 @@
     </div>
     <p><img src="images/mymetype-button.png" onclick="alert('you\'re already on this website you DUMBASS!!!!!!! /silly');"><br><small>(This 88x31 button is licensed under the terms of the <a href="https://creativecommons.org/publicdomain/zero/1.0/">CC0 1.0</a> license. Feel free to add it to your site and make it link back here!)</small></p>
     <p><a href="https://spax.zone/"><img src="https://spax.zone/buttons/spaxdotzone.gif"></a></p>
-    <p><a href="https://www.mabsland.com/Adoption.html"><img src="images/Censor_14c.gif" width="88" height="31"></a> <a href="https://kernel.org"><img src="images/linuxnow.jpg"></a> <a href="https://massgrave.dev/"><img src="images/windows.gif"></a> <a href="https://neocities.org"><img src="images/neocities_made.gif"></a> <a href="https://ohhey.gay"><img src="images/gaypride.gif"></a> <a href="https://github.com/ungoogled-software/ungoogled-chromium"><img src="images/best_chrome.gif"></a> <a href="https://creativecommons.org/licenses/list"><img src="images/cc.primary.srr.gif"></a> <a href="https://www.ebay.com/sch/i.html?_nkw=lenovo%20thinkpad%20w541"><img src="images/bestvieweddesktop.gif"></a> <a href="https://eggramen.neocities.org/creations/edits/buttons"><img src="images/code-editor_button2multi.gif"></a> <a href="https://gentoo.org"><img src="images/gentoo_button.png"></a> <a href="https://badge.les.bi"><img title="bi"  src="https://badge.les.bi/88x31/bi.svg"></a></p>
-    <p><a href="https://www.fontsquirrel.com/fonts/BPmono">BPmono</a> © <a href="https://backpacker.gr/">Backpacker</a> 2009 - <a href="https://creativecommons.org/licenses/by-nd/3.0/">CC BY-ND 3.0</a></p>
-    <p>© MymeType 2025 - <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a></p>
-    <p>This website's source code is licensed under the terms of the GNU Affero General Public License v3.0 or later. You can view it <a href="https://codeberg.org/MymeType/personal-website">here</a>.</p>
-    <p>Website version: <b>pre-redesign</b></p>
+    <p><a href="https://www.mabsland.com/Adoption.html"><img src="images/Censor_14c.gif" width="88" height="31"></a> <a href="https://kernel.org"><img src="images/linuxnow.jpg"></a> <a href="https://massgrave.dev/"><img src="images/windows.gif"></a> <a href="https://neocities.org"><img src="images/neocities_made.gif"></a> <a href="https://ohhey.gay"><img src="images/gaypride.gif"></a> <a href="https://github.com/ungoogled-software/ungoogled-chromium"><img src="images/best_chrome.gif"></a> <a href="https://creativecommons.org/licenses/list"><img src="images/cc.primary.srr.gif"></a> <a href="https://www.ebay.com/sch/i.html?_nkw=lenovo%20thinkpad%20w541"><img src="images/bestvieweddesktop.gif"></a> <a href="https://eggramen.neocities.org/creations/edits/buttons"><img src="images/code-editor_button2multi.gif"></a> <a href="https://gentoo.org"><img src="images/gentoo_button.png"></a> <a href="https://badge.les.bi"><img title="bi"  src="https://badge.les.bi/88x31/bi.svg"></a> <img src="images/twopaws.png"</p>
+    <p>Fantasque Sans Mono © Jany Belluz 2013-2016 - <a href="licenses/Fantasque-Sans-Mono/SIL Open Font License.txt"> Open Font License 1.1</a></p>
+    <p>© MymeType 2025 - <a href="licenses/general/CC-BY-SA-4.0">CC BY-SA 4.0</a></p>
+    <p>This website's <a href="https://codeberg.org/MymeType/personal-website">source code</a> is licensed under the terms of the GNU Affero General Public License v3.0 or later. You can view a copy of the license <a href="licenses/general/AGPL-3.0-or-later">here</a>.</p>
     <link href="https://melonking.net/styles/flood.css" rel="stylesheet" type="text/css" media="all" />
     <script src="https://melonking.net/scripts/flood.js"></script>
     <script>
