Rework blog section

--- a/src/misc/blog-template-page.html
+++ b/src/misc/blog-template-page.html
@@ -1,19 +1,88 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
   <head>
+
     <meta charset="UTF-8">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>guest@mymetype.gay ~ $</title>
-    <link href="/style.css" rel="stylesheet" type="text/css" media="all">
+
+    <title>
+      guest@mymetype.gay /blog $
+    </title>
+
+    <link href="../style.css" rel="stylesheet" type="text/css" media="all">
+
     <meta name="fediverse:creator" content="@mymetype@furry.engineer">
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+
+    <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
+
   </head>
+
   <body>
-    <!-- write your own blog entry in this space -->
-    <p>------<br>|<a href="/blog/index.html">BLOG</a>|<br>------</p>
-    <p>------<br>|<a href="/index.html">HOME</a>|<br>------</p>
-    <p><a href="https://www.fontsquirrel.com/fonts/BPmono">BPmono</a> © <a href="https://backpacker.gr/">Backpacker</a> 2009 - <a href="https://creativecommons.org/licenses/by-nd/3.0/">CC BY-ND 3.0</a></p>
-    <p>© MymeType 2025 - <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a></p>
-    <p>This website's source code is licensed under the terms of the GNU Affero General Public License v3.0 or later. You can view it <a href="https://codeberg.org/MymeType/personal-website">here</a>.</p>
+
+    <!--
+    Replace DATE with the current date and title with the article's title
+    -->
+    <h1>
+      [DATE]: TITLE
+    </h1>
+
+    <h2>
+      Header
+    </h2>
+
+    <p>
+      Content
+    </p>
+
+    <p>
+      <small class="caption">
+        Image caption
+      </small>
+    </p>
+    
+    <!--
+    Add more headers and paragraphs as needed
+    -->
+
+    <p>
+      ######
+      <br>#<a href="index.html">BLOG</a>#<br>
+      ######
+    </p>
+
+    <p>
+      ######
+      <br>#<a href="../index.html">HOME</a>#<br>
+      ######
+    </p>
+
+    <p>
+      Fantasque Sans Mono © Jany Belluz 2013-2016 - 
+      <a href="licenses/Fantasque-Sans-Mono/SIL Open Font License.txt">
+        Open Font License 1.1
+      </a>
+    </p>
+
+    <p>
+      © MymeType 2025 - 
+      <a href="licenses/general/CC-BY-SA-4.0">
+        CC BY-SA 4.0
+      </a>
+    </p>
+
+    <p>
+      This website's 
+      <a href="https://codeberg.org/MymeType/personal-website">
+        source code
+      </a> 
+      is licensed under the terms of the GNU Affero General Public License v3.0 or later. You can view a copy of the license 
+      <a href="licenses/general/AGPL-3.0-or-later">
+        here</a>.
+    </p>
+
   </body>
+
 </html>
