Add Misha's button and add headers

--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,10 @@
     onclick="this.src='images/axel-teal-head-happy.png';">
 
     <h1>MymeType - マイムタイプ - /maɪmtaɪp/</h1>
+    
+    <h2>
+      Main pages
+    </h2>
 
     <p>
       #########
@@ -74,6 +78,10 @@
     </p>
     -->
 
+    <h2>
+      Webrings
+    </h2>
+
     <div id='furryring'>
 
       <script type="text/javascript" 
@@ -84,24 +92,40 @@
 
     </div>
 
+    <h2>
+      My button
+    </h2>
+
     <p>
       <img src="images/mymetype-button.png" 
       onclick="alert('you\'re already on this website you DUMBASS!!! /silly');">
       <br>
-      <small>
+      <small class="caption">
         (This 88x31 button is licensed under the terms of the 
-        <a href="https://creativecommons.org/publicdomain/zero/1.0/">
+        <a href="licenses/general/CC0-1.0">
           CC0 1.0
         </a> 
         license. Feel free to add it to your site and make it link back here!)
       </small>
     </p>
 
+    <h2>
+      Neat people (for various reasons)
+    </h2>
+
     <p>
       <a href="https://spax.zone/">
         <img src="https://spax.zone/buttons/spaxdotzone.gif">
       </a>
+      <a href="https://mishamallow.neocities.org" target="_blank">
+        <img src="https://mishamallow.neocities.org/buttons/mishamallow_1.gif" 
+        alt="Mishamallow">
+      </a>
     </p>
+
+    <h2>
+      Misc buttons
+    </h2>
 
     <p>
       <a href="https://www.mabsland.com/Adoption.html">
