--- a/src/index.html
+++ b/src/index.html
@@ -102,7 +102,7 @@
       <br>
       <small class="caption">
         (This 88x31 button is licensed under the terms of the 
-        <a href="licenses/general/CC0-1.0">
+        <a href="licenses/general/CC0-1.0.txt">
           CC0 1.0
         </a> 
         license. Feel free to add it to your site and make it link back here!)
@@ -173,7 +173,7 @@
 
     <p>
       © MymeType 2025 - 
-      <a href="licenses/general/CC-BY-SA-4.0">
+      <a href="licenses/general/CC-BY-SA-4.0.txt">
         CC BY-SA 4.0
       </a>
     </p>
@@ -185,7 +185,7 @@
       </a> 
       is licensed under the terms of the GNU Affero General Public License v3.0 
       or later. You can view a copy of the license 
-      <a href="licenses/general/AGPL-3.0-or-later">
+      <a href="licenses/general/AGPL-3.0-or-later.txt">
         here</a>.
       </p>
 
