--- a/src/my-works.html
+++ b/src/my-works.html
@@ -21,9 +21,9 @@
     <img src="images/Rainbow_hell.png" width="640px">
     <p><a href="https://yume.wiki/2kki/Rainbow_Hell">Rainbow Hell</a></p>
     <p>------<br>|<a href="index.html">HOME</a>|<br>------</p>
-    <p>© <a href="https://yume.wiki/">YumeWiki</a> 2023, 2024 - <a href="licenses/general/CC-BY-NC-SA-4.0">CC BY-NC-SA 4.0</a></p>
+    <p>© <a href="https://yume.wiki/">YumeWiki</a> 2023, 2024 - <a href="licenses/general/CC-BY-NC-SA-4.0.txt">CC BY-NC-SA 4.0</a></p>
     <p>Fantasque Sans Mono © Jany Belluz 2013-2016 - <a href="licenses/Fantasque-Sans-Mono/SIL Open Font License.txt"> Open Font License 1.1</a></p>
-    <p>© MymeType 2025 - <a href="licenses/general/CC-BY-SA-4.0">CC BY-SA 4.0</a></p>
-    <p>This website's <a href="https://codeberg.org/MymeType/personal-website">source code</a> is licensed under the terms of the GNU Affero General Public License v3.0 or later. You can view a copy of the license <a href="licenses/general/AGPL-3.0-or-later">here</a>.</p>
+    <p>© MymeType 2025 - <a href="licenses/general/CC-BY-SA-4.0.txt">CC BY-SA 4.0</a></p>
+    <p>This website's <a href="https://codeberg.org/MymeType/personal-website">source code</a> is licensed under the terms of the GNU Affero General Public License v3.0 or later. You can view a copy of the license <a href="licenses/general/AGPL-3.0-or-later.txt">here</a>.</p>
   </body>
 </html>
