Update selection color and add button code textarea

--- a/src/index.html
+++ b/src/index.html
@@ -107,6 +107,12 @@
         </a> 
         license. Feel free to add it to your site and make it link back here!)
       </small>
+      <br>
+      <textarea readonly rows="3" cols="71">
+<a href="https://mymetype.neocities.org">
+  <img src="https://mymetype.neocities.org/images/mymetype-button.png">
+</a>
+      </textarea>
     </p>
 
     <h2>
