Dedicate the source code to the public domain and lay the groundwork for further public domain dedication

--- a/src/changelog.html
+++ b/src/changelog.html
@@ -1,3 +1,7 @@
+<!--
+
+PRESERVED FOR HISTORICAL PURPOSES
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -59,3 +63,6 @@
     <p>This website's source code is licensed under the terms of the GNU Affero General Public License v3.0 or later. You can view it <a href="https://codeberg.org/MymeType/personal-website">here</a>.</p>
   </body>
 </html>
+
+-->
+
