--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,8 @@
+<!-- 
+  TODO:
+  - Make Axel head replacement so that it can be licensed under CC0 1.0 
+-->
+
 <!DOCTYPE html>
 
 <html lang="en">
@@ -9,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>
-      guest@mymetype.gay ~ $
+      guest@mymetype.gay / $
     </title>
 
     <link href="style.css" rel="stylesheet" type="text/css" media="all">
@@ -100,6 +105,7 @@
       <img src="images/mymetype-button.png" 
       onclick="alert('you\'re already on this website you DUMBASS!!! /silly');">
       <br>
+      <!---->
       <small class="caption">
         (This 88x31 button is licensed under the terms of the 
         <a href="licenses/general/CC0-1.0.txt">
@@ -177,8 +183,11 @@
       </a>
     </p>
 
+    <!--
+      Switch license to CC0 1.0 once replacement is done
+    -->
     <p>
-      © MymeType 2025 - 
+      Axel headshot header images © MymeType 2025 - 
       <a href="licenses/general/CC-BY-SA-4.0.txt">
         CC BY-SA 4.0
       </a>
@@ -189,11 +198,11 @@
       <a href="https://codeberg.org/MymeType/personal-website">
         source code
       </a> 
-      is licensed under the terms of the GNU Affero General Public License v3.0 
-      or later. You can view a copy of the license 
-      <a href="licenses/general/AGPL-3.0-or-later.txt">
+      is dedicated to the public domain under the Unlicense. You can view a 
+      copy 
+      <a href="licenses/general/Unlicense.txt">
         here</a>.
-      </p>
+    </p>
 
     <link href="https://melonking.net/styles/flood.css" rel="stylesheet" type="text/css" media="all" />
 
