--- a/src/misc/blog-template-page.html
+++ b/src/misc/blog-template-page.html
@@ -49,13 +49,17 @@
 
     <p>
       ######
-      <br>#<a href="index.html">BLOG</a>#<br>
+      <br>
+      #<a href="index.html">BLOG</a>#
+      <br>
       ######
     </p>
 
     <p>
       ######
-      <br>#<a href="../index.html">HOME</a>#<br>
+      <br>
+      #<a href="../index.html">HOME</a>#
+      <br>
       ######
     </p>
 
@@ -67,9 +71,9 @@
     </p>
 
     <p>
-      © MymeType 2025 - 
-      <a href="../licenses/general/CC-BY-SA-4.0.txt">
-        CC BY-SA 4.0
+      This article © MymeType 2025 - 
+      <a href="../licenses/general/CC0-1.0.txt">
+        CC0 1.0
       </a>
     </p>
 
@@ -78,8 +82,9 @@
       <a href="https://codeberg.org/MymeType/personal-website">
         source code
       </a> 
-      is licensed under the terms of the GNU Affero General Public License v3.0 or later. You can view a copy of the license 
-      <a href="../licenses/general/AGPL-3.0-or-later.txt">
+      is dedicated to the public domain under the Unlicense. You can view a 
+      copy 
+      <a href="../licenses/general/Unlicense.txt">
         here</a>.
     </p>
 
