--- a/src/misc/template-page.html
+++ b/src/misc/template-page.html
@@ -1,16 +1,63 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
   <head>
+
     <meta charset="UTF-8">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>guest@mymetype.gay ~ $</title>
-    <link href="/style.css" rel="stylesheet" type="text/css" media="all">
+
+    <title>
+      guest@mymetype.gay / $
+    </title>
+
+    <link href="style.css" rel="stylesheet" type="text/css" media="all">
+
   </head>
+
   <body>
-    <!-- Add whatever shit you want to add in this space -->
-    <p>------<br>|<a href="index.html">HOME</a>|<br>------</p>
-    <p><a href="https://www.fontsquirrel.com/fonts/BPmono">BPmono</a> © <a href="https://backpacker.gr/">Backpacker</a> 2009 - <a href="https://creativecommons.org/licenses/by-nd/3.0/">CC BY-ND 3.0</a></p>
-    <p>© MymeType 2025 - <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a></p>
-    <p>This website's source code is licensed under the terms of the GNU Affero General Public License v3.0 or later. You can view it <a href="https://codeberg.org/MymeType/personal-website">here</a>.</p>
+
+    <!--
+    Add whatever shit you want to add in this space
+    -->
+
+    <p>
+      ######
+      <br>
+      #<a href="index.html">HOME</a>#
+      <br>
+      ######
+    </p>
+    
+    <p>
+      Fantasque Sans Mono © Jany Belluz 2013-2016 - 
+      <a href="licenses/Fantasque-Sans-Mono/SIL Open Font License.txt">
+        Open Font License 1.1
+      </a>
+    </p>
+
+    <!--
+      Add this if theres any content (e.g. images, text) created for this page
+    -->
+    <p>
+      CONTENT © MymeType 2025 - 
+      <a href="licenses/general/CC0-1.0.txt">
+        CC0 1.0
+      </a>
+    </p>
+
+    <p>
+      This website's 
+      <a href="https://codeberg.org/MymeType/personal-website">
+        source code
+      </a> 
+      is dedicated to the public domain under the Unlicense. You can view a 
+      copy 
+      <a href="licenses/general/Unlicense.txt">
+        here</a>.
+    </p>
+
   </body>
+
 </html>
