--- a/src/not_found.html
+++ b/src/not_found.html
@@ -1,17 +1,50 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
   <head>
+
     <meta charset="UTF-8">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>guest@mymetype.gay ~ $</title>
+
+    <title>guest@mymetype.gay / $</title>
+
     <link href="style.css" rel="stylesheet" type="text/css" media="all">
+
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+
   </head>
+
   <body>
+
     <h1>404 - NOT FOUND</h1>
-    <p>------<br>|<a href="index.html">HOME</a>|<br>------</p>
-    <p>Fantasque Sans Mono © Jany Belluz 2013-2016 - <a href="licenses/Fantasque-Sans-Mono/SIL Open Font License.txt"> Open Font License 1.1</a></p>
-    <p>© MymeType 2025 - <a href="licenses/general/CC-BY-SA-4.0.txt">CC BY-SA 4.0</a></p>
-    <p>This website's <a href="https://codeberg.org/MymeType/personal-website">source code</a> is licensed under the terms of the GNU Affero General Public License v3.0 or later. You can view a copy of the license <a href="licenses/general/AGPL-3.0-or-later.txt">here</a>.</p>
+
+    <p>
+      ######
+      <br>
+      #<a href="index.html">HOME</a>#
+      <br>
+      ######
+    </p>
+    
+    <p>
+      Fantasque Sans Mono © Jany Belluz 2013-2016 - 
+      <a href="licenses/Fantasque-Sans-Mono/SIL Open Font License.txt">
+        Open Font License 1.1
+      </a>
+    </p>
+
+    <p>
+      This website's 
+      <a href="https://codeberg.org/MymeType/personal-website">
+        source code
+      </a> 
+      is dedicated to the public domain under the Unlicense. You can view a 
+      copy 
+      <a href="licenses/general/Unlicense.txt">
+        here</a>.
+    </p>
+
   </body>
 </html>
