--- a/src/my-works.html
+++ b/src/my-works.html
@@ -1,29 +1,110 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
   <head>
+
     <meta charset="UTF-8">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>guest@mymetype.gay ~ $</title>
+
+    <title>
+      guest@mymetype.gay / $
+    </title>
+
     <link href="style.css" rel="stylesheet" type="text/css" media="all">
+
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+
   </head>
+
   <body>
+
     <h1>MY WORKS</h1>
-    <h2><a href="https://yume.wiki/2kki/Yume_2kki_Wiki">Yume 2kki</a> (Associate Developer)</h2>
+    
+    <h2>
+      <a href="https://yume.wiki/2kki/Yume_2kki_Wiki">
+        Yume 2kki
+      </a> 
+      (Associate Developer)
+    </h2>
+
     <img src="images/640px-DarkBunker_0.126.png">
-    <p><a href="https://yume.wiki/2kki/Dark_Bunker">Dark Bunker</a></p>
+
+    <p>
+      <a href="https://yume.wiki/2kki/Dark_Bunker">
+        Dark Bunker
+      </a>
+    </p>
+
     <img src="images/640px-The_pansy_path_A.png">
-    <p><a href="https://yume.wiki/2kki/The_Pansy_Path">The Pansy Path</a></p>
+
+    <p>
+      <a href="https://yume.wiki/2kki/The_Pansy_Path">
+        The Pansy Path
+      </a>
+    </p>
+
     <img src="images/Clock_World.png">
-    <p><a href="https://yume.wiki/2kki/Clock_World">Clock World</a></p>
+
+    <p>
+      <a href="https://yume.wiki/2kki/Clock_World">
+        Clock World
+      </a>
+    </p>
+    
     <img src="images/Restored_Vanta_120.png">
-    <p><a href="https://yume.wiki/2kki/Restored_Vantablack_World">Restored Vantablack World</a></p>
+
+    <p>
+      <a href="https://yume.wiki/2kki/Restored_Vantablack_World">
+        Restored Vantablack World
+      </a>
+    </p>
+
     <img src="images/Rainbow_hell.png" width="640px">
-    <p><a href="https://yume.wiki/2kki/Rainbow_Hell">Rainbow Hell</a></p>
-    <p>------<br>|<a href="index.html">HOME</a>|<br>------</p>
-    <p>© <a href="https://yume.wiki/">YumeWiki</a> 2023, 2024 - <a href="licenses/general/CC-BY-NC-SA-4.0.txt">CC BY-NC-SA 4.0</a></p>
-    <p>Fantasque Sans Mono © Jany Belluz 2013-2016 - <a href="licenses/Fantasque-Sans-Mono/SIL Open Font License.txt"> Open Font License 1.1</a></p>
-    <p>© MymeType 2025 - <a href="licenses/general/CC-BY-SA-4.0.txt">CC BY-SA 4.0</a></p>
-    <p>This website's <a href="https://codeberg.org/MymeType/personal-website">source code</a> is licensed under the terms of the GNU Affero General Public License v3.0 or later. You can view a copy of the license <a href="licenses/general/AGPL-3.0-or-later.txt">here</a>.</p>
+
+    <p>
+      <a href="https://yume.wiki/2kki/Rainbow_Hell">
+        Rainbow Hell
+      </a>
+    </p>
+
+    <p>
+      ######
+      <br>
+      #<a href="index.html">HOME</a>#
+      <br>
+      ######
+    </p>
+
+    <p>Yume 2kki screenshots © 
+      <a href="https://yume.wiki/">
+        YumeWiki
+      </a> 
+      2023, 2024 - 
+      <a href="licenses/general/CC-BY-NC-SA-4.0.txt">
+        CC BY-NC-SA 4.0
+      </a>
+    </p>
+
+    <p>
+      Fantasque Sans Mono © Jany Belluz 2013-2016 - 
+      <a href="licenses/Fantasque-Sans-Mono/SIL Open Font License.txt">
+        Open Font License 1.1
+      </a>
+    </p>
+
+    <p>
+      This website's 
+      <a href="https://codeberg.org/MymeType/personal-website">
+        source code
+      </a> 
+      is dedicated to the public domain under the Unlicense. You can view a 
+      copy 
+      <a href="licenses/general/Unlicense.txt">
+        here</a>.
+    </p>
+
   </body>
+
 </html>
