--- a/src/socials.html
+++ b/src/socials.html
@@ -1,36 +1,155 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
   <head>
+
     <meta charset="UTF-8">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>guest@mymetype.gay ~ $</title>
+
+    <title>
+      guest@mymetype.gay / $
+    </title>
+
     <link href="style.css" rel="stylesheet" type="text/css" media="all">
+
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+
   </head>
+
   <body>
-    <h1>SOCIALS</h1>
-    <h2>General</h2>
-    <p><a href="https://youtube.com/@MymeType?sub_confirmation=1">Youtube</a></p>
-    <p><a href="https://mymetype.tumblr.com/">Tumblr</a></p>
-    <p><a href="https://bsky.app/profile/mymetype.bsky.social">Bluesky</a></p>
-    <p><a href="https://furry.engineer/@mymetype">Mastodon (furry.engineer)</a></p>
-    <h2>Art and photos</h2>
-    <p><a href="https://www.instagram.com/mymetype">Instagram</a></p>
-    <p><a href="https://artfight.net/~MymeType">Art Fight</a></p>
-    <p><a href="https://www.weasyl.com/~mymetype">Weasyl</a></p>
-    <p><a href="https://toyhou.se/MymeType">Toyhouse</a></p>
-    <h2>Coding</h2>
-    <p><a href="https://codeberg.org/MymeType">Codeberg</a></p>
-    <p><a href="https://github.com/MymeType">Github</a></p>
-    <h2>Videogames</h2>
-    <p><a href="https://steamcommunity.com/id/mymetype/">Steam</a></p>
-    <p><a href="https://www.roblox.com/users/1249273907/profile">Roblox</a></p>
-    <h2>Messaging</h2>
-    <p><a href="https://discord.com/users/1018176306829070406">Discord</a></p>
-    <p>------<br>|<a href="index.html">HOME</a>|<br>------</p>
-    <p>Fantasque Sans Mono © Jany Belluz 2013-2016 - <a href="licenses/Fantasque-Sans-Mono/SIL Open Font License.txt"> Open Font License 1.1</a></p>
-    <p>© MymeType 2025 - <a href="licenses/general/CC-BY-SA-4.0.txt">CC BY-SA 4.0</a></p>
-    <p>This website's <a href="https://codeberg.org/MymeType/personal-website">source code</a> is licensed under the terms of the GNU Affero General Public License v3.0 or later. You can view a copy of the license <a href="licenses/general/AGPL-3.0-or-later.txt">here</a>.</p>
+
+    <h1>
+      SOCIALS
+    </h1>
+
+    <h2>
+      General
+    </h2>
+    
+    <p>
+      <a href="https://youtube.com/@MymeType?sub_confirmation=1">
+        Youtube
+      </a>
+    </p>
+
+    <p>
+      <a href="https://mymetype.tumblr.com/">
+        Tumblr
+      </a>
+    </p>
+
+    <p>
+      <a href="https://bsky.app/profile/mymetype.bsky.social">
+        Bluesky
+      </a>
+    </p>
+
+    <p>
+      <a href="https://furry.engineer/@mymetype">
+        Mastodon (furry.engineer)
+      </a>
+    </p>
+
+    <h2>
+      Art and photos
+    </h2>
+
+    <p>
+      <a href="https://www.instagram.com/mymetype">
+        Instagram
+      </a>
+    </p>
+
+    <p>
+      <a href="https://artfight.net/~MymeType">
+        Art Fight
+      </a>
+    </p>
+
+    <p>
+      <a href="https://www.weasyl.com/~mymetype">
+        Weasyl
+      </a>
+    </p>
+
+    <p>
+      <a href="https://toyhou.se/MymeType">
+        Toyhouse
+      </a>
+    </p>
+
+    <h2>
+      Coding
+    </h2>
+
+    <p>
+      <a href="https://codeberg.org/MymeType">
+        Codeberg
+      </a>
+    </p>
+
+    <p>
+      <a href="https://github.com/MymeType">
+        Github
+      </a>
+    </p>
+
+    <h2>
+      Videogames
+    </h2>
+
+    <p>
+      <a href="https://steamcommunity.com/id/mymetype/">
+        Steam
+      </a>
+    </p>
+
+    <p>
+      <a href="https://www.roblox.com/users/1249273907/profile">
+        Roblox
+      </a>
+    </p>
+
+    <h2>
+      Messaging
+    </h2>
+
+    <p>
+      <a href="https://discord.com/users/1018176306829070406">
+        Discord
+      </a>
+    </p>
+
+    <p>
+      ######
+      <br>
+      #<a href="index.html">HOME</a>#
+      <br>
+      ######
+    </p>
+    
+    <p>
+      Fantasque Sans Mono © Jany Belluz 2013-2016 - 
+      <a href="licenses/Fantasque-Sans-Mono/SIL Open Font License.txt">
+        Open Font License 1.1
+      </a>
+    </p>
+
+
+    <p>
+      This website's 
+      <a href="https://codeberg.org/MymeType/personal-website">
+        source code
+      </a> 
+      is dedicated to the public domain under the Unlicense. You can view a 
+      copy 
+      <a href="licenses/general/Unlicense.txt">
+        here</a>.
+    </p>
+
   </body>
+
 </html>
 
