--- a/src/index.html
+++ b/src/index.html
@@ -143,7 +143,7 @@
       <a href="https://www.mabsland.com/Adoption.html">
         <img src="images/Censor_14c.gif" width="88" height="31">
       </a> 
-      <a href="https://kernel.org">
+      <a href="https://www.kernel.org/pub/linux/kernel/v2.1/">
         <img src="images/linuxnow.jpg">
       </a> 
       <a href="https://massgrave.dev/">
