--- a/src/index.html
+++ b/src/index.html
@@ -173,7 +173,10 @@
       <a href="https://badge.les.bi">
         <img title="bi"  src="https://badge.les.bi/88x31/bi.svg">
       </a> 
-      <img src="images/twopaws.png">
+      <a href="https://en.wikifur.com/wiki/MymeType">
+        <img src="images/twopaws.png">
+      </a>
+
     </p>
 
     <p>
