Add older drawings of Axel

--- a/src/gallery.html
+++ b/src/gallery.html
@@ -28,16 +28,28 @@
       My art
     </h2>
 
-    <img src="images/axel-refsheet.png">
+    <img src="images/axel-refsheet.png" width="600px" height="100%">
 
     <p>
-      Axel refsheet
+      <small class="caption">Axel refsheet</small>
     </p>
 
     <img src="images/axel-hi.png">
 
     <p>
-      Axel waving
+      <small class="caption">Axel waving</small>
+    </p>
+
+    <img src="images/axel-first-design.jpg" width="600px">
+
+    <p>
+      <small class="caption">Earliest ever design of Axel (<a href="https://www.tumblr.com/mymetype/730076449402404864/guys-i-made-a-fursona-does-this-make-me-a-furry?source=share">from 2023</a>)</small>
+    </p>
+
+    <img src="images/axel-old-drawing.jpg" width="600px">
+
+    <p>
+      <small class="caption">Drawing featuring older design from early 2024</small>
     </p>
 
     <p>
@@ -55,9 +67,16 @@
       </a>
     </p>
 
-    <p>Axel refsheet, Axel waving © MymeType 2025 - 
+    <p>Axel refsheet and Axel waving © MymeType 2024, 2025 - 
       <a href="licenses/general/CC-BY-SA-4.0.txt">
         CC BY-SA 4.0
+      </a>
+    </p>
+
+    <p>
+      Every artwork (unless specified) is dedicated to the public domain under 
+      <a href="licenses/general/CC0-1.0.txt">
+        CC0 1.0
       </a>
     </p>
 
