--- a/src/misc/template-page.html
+++ b/src/misc/template-page.html
@@ -41,7 +41,7 @@
       Add this if theres any content (e.g. images, text) created for this page
     -->
     <p>
-      CONTENT © MymeType 2025 - 
+      CONTENT is dedicated to the public domain under 
       <a href="licenses/general/CC0-1.0.txt">
         CC0 1.0
       </a>
