latex license time :3

--- a/src/gallery.html
+++ b/src/gallery.html
@@ -1,96 +1,107 @@
+<!--
+  ## src/gallery.html
+  ## Copyright 2025 Alexandru Mihai Buzduc
+  #
+  # This work may be distributed and/or modified under the
+  # conditions of the LaTeX Project Public License, either version 1.3c
+  # of this license or (at your option) any later version.
+  # The latest version of this license is in
+  #   http://www.latex-project.org/lppl.txt
+  # and version 1.3 or later is part of all distributions of LaTeX
+  # version 2005/12/01 or later.
+  #
+  # This work has the LPPL maintenance status `maintained'.
+  #
+  # The Current Maintainer of this work is Alexandru Mihai Buzduc.
+  #
+  # This work consists of the files listed in src/lppl-files.txt.
+-->
+
 <!DOCTYPE html>
 
 <html lang="en">
-
   <head>
+    <meta charset="UTF-8" />
 
-    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>guest@mymetype.gay / $</title>
 
-    <title>
-      guest@mymetype.gay / $
-    </title>
+    <link href="style.css" rel="stylesheet" type="text/css" media="all" />
 
-    <link href="style.css" rel="stylesheet" type="text/css" media="all">
-
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
-
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
   </head>
 
   <body>
+    <h1>GALLERY</h1>
 
-    <h1>
-      GALLERY
-    </h1>
+    <h2>My art</h2>
 
-    <h2>
-      My art
-    </h2>
-
-    <img src="images/axel-refsheet.png" width="600px" height="100%">
+    <img src="images/axel-refsheet.png" width="600px" height="100%" />
 
     <p>
-      <small class="caption">Axel refsheet</small>
+      <small class="caption">Old Axel refsheet</small>
     </p>
 
-    <img src="images/axel-hi.png">
+    <img src="images/axel-hi.png" />
 
     <p>
-      <small class="caption">Axel waving</small>
+      <small class="caption">Old Axel waving</small>
     </p>
 
-    <img src="images/axel-first-design.jpg" width="600px">
+    <img src="images/axel-first-design.jpg" width="600px" />
 
     <p>
-      <small class="caption">Earliest ever design of Axel (<a href="https://www.tumblr.com/mymetype/730076449402404864/guys-i-made-a-fursona-does-this-make-me-a-furry?source=share">from 2023</a>)</small>
+      <small class="caption"
+        >Earliest ever design of Axel (<a
+          href="https://www.tumblr.com/mymetype/730076449402404864/guys-i-made-a-fursona-does-this-make-me-a-furry?source=share"
+          >from 2023</a
+        >)</small
+      >
     </p>
 
-    <img src="images/axel-old-drawing.jpg" width="600px">
+    <img src="images/axel-old-drawing.jpg" width="600px" />
 
     <p>
-      <small class="caption">Drawing featuring older design from early 2024</small>
+      <small class="caption"
+        >Drawing featuring older design from early 2024</small
+      >
     </p>
 
     <p>
       ######
-      <br>
+      <br />
       #<a href="index.html">HOME</a>#
-      <br>
+      <br />
       ######
     </p>
 
     <p>
-      Fantasque Sans Mono © Jany Belluz 2013-2016 - 
-      <a href="licenses/Fantasque-Sans-Mono/SIL Open Font License.txt"> 
+      Fantasque Sans Mono © Jany Belluz 2013-2016 is licensed under the
+      <a href="licenses/Fantasque-Sans-Mono/SIL Open Font License.txt">
         Open Font License 1.1
       </a>
     </p>
 
-    <p>Axel refsheet and Axel waving © MymeType 2024, 2025 - 
-      <a href="licenses/general/CC-BY-SA-4.0.txt">
-        CC BY-SA 4.0
-      </a>
+    <p>
+      "Old Axel refsheet" and "Old Axel waving" © MymeType 2024, 2025 -
+      <a href="licenses/general/CC-BY-SA-4.0.txt"> CC BY-SA 4.0 </a>
     </p>
 
     <p>
-      Every artwork (unless specified) is dedicated to the public domain under 
-      <a href="licenses/general/CC0-1.0.txt">
-        CC0 1.0
-      </a>
+      "Earliest ever design of Axel (from 2023)" and "Drawing featuring older
+      design from early 2024" are dedicated to the public domain under
+      <a href="licenses/general/CC0-1.0.txt"> CC0 1.0 </a>
     </p>
 
     <p>
-      This website's 
+      This website's
       <a href="https://codeberg.org/MymeType/personal-website">
-        source code
-      </a> 
-      is dedicated to the public domain under the Unlicense. You can view a 
-      copy 
-      <a href="licenses/general/Unlicense.txt">
-        here</a>.
+        source code files</a
+      >
+      (where specified in <a href="./lppl-files.txt">lppl-files.txt</a>) is
+      licensed under the LaTeX Project Public License v1.3c. You can view a copy
+      <a href="licenses/general/LPPL-1.3c.txt"> here</a>.
     </p>
-
   </body>
-
 </html>
