--- a/src/my-works.html
+++ b/src/my-works.html
@@ -1,59 +1,64 @@
+<!--
+  ## src/my-works.html
+  ## Copyright 2025 Alexandru Mihai Buzduc
+  #
+  # This work may be distributed and/or modified under the
+  # conditions of the LaTeX Project Public License, either version 1.3c
+  # of this license or (at your option) any later version.
+  # The latest version of this license is in
+  #   http://www.latex-project.org/lppl.txt
+  # and version 1.3 or later is part of all distributions of LaTeX
+  # version 2005/12/01 or later.
+  #
+  # This work has the LPPL maintenance status `maintained'.
+  #
+  # The Current Maintainer of this work is Alexandru Mihai Buzduc.
+  #
+  # This work consists of the files listed in src/lppl-files.txt.
+-->
+
 <!DOCTYPE html>
 
 <html lang="en">
-
   <head>
+    <meta charset="UTF-8" />
 
-    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>guest@mymetype.gay / $</title>
 
-    <title>
-      guest@mymetype.gay / $
-    </title>
+    <link href="style.css" rel="stylesheet" type="text/css" media="all" />
 
-    <link href="style.css" rel="stylesheet" type="text/css" media="all">
-
-    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
-
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
   </head>
 
   <body>
-
     <h1>MY WORKS</h1>
-    
+
     <h2>
-      <a href="https://yume.wiki/2kki/Yume_2kki_Wiki">
-        Yume 2kki
-      </a> 
+      <a href="https://yume.wiki/2kki/Yume_2kki_Wiki"> Yume 2kki </a>
       (Associate Developer)
     </h2>
 
-    <img src="images/640px-DarkBunker_0.126.png">
+    <img src="images/640px-DarkBunker_0.126.png" />
 
     <p>
-      <a href="https://yume.wiki/2kki/Dark_Bunker">
-        Dark Bunker
-      </a>
+      <a href="https://yume.wiki/2kki/Dark_Bunker"> Dark Bunker </a>
     </p>
 
-    <img src="images/640px-The_pansy_path_A.png">
+    <img src="images/640px-The_pansy_path_A.png" />
 
     <p>
-      <a href="https://yume.wiki/2kki/The_Pansy_Path">
-        The Pansy Path
-      </a>
+      <a href="https://yume.wiki/2kki/The_Pansy_Path"> The Pansy Path </a>
     </p>
 
-    <img src="images/Clock_World.png">
+    <img src="images/Clock_World.png" />
 
     <p>
-      <a href="https://yume.wiki/2kki/Clock_World">
-        Clock World
-      </a>
+      <a href="https://yume.wiki/2kki/Clock_World"> Clock World </a>
     </p>
-    
-    <img src="images/Restored_Vanta_120.png">
+
+    <img src="images/Restored_Vanta_120.png" />
 
     <p>
       <a href="https://yume.wiki/2kki/Restored_Vantablack_World">
@@ -61,50 +66,44 @@
       </a>
     </p>
 
-    <img src="images/Rainbow_hell.png" width="640px">
+    <img src="images/Rainbow_hell.png" width="640px" />
 
     <p>
-      <a href="https://yume.wiki/2kki/Rainbow_Hell">
-        Rainbow Hell
-      </a>
+      <a href="https://yume.wiki/2kki/Rainbow_Hell"> Rainbow Hell </a>
     </p>
 
     <p>
       ######
-      <br>
+      <br />
       #<a href="index.html">HOME</a>#
-      <br>
+      <br />
       ######
     </p>
 
-    <p>Yume 2kki screenshots © 
-      <a href="https://yume.wiki/">
-        YumeWiki
-      </a> 
-      2023, 2024 - 
-      <a href="licenses/general/CC-BY-NC-SA-4.0.txt">
-        CC BY-NC-SA 4.0
-      </a>
+    <p>
+      Yume 2kki screenshots ©
+      <a href="https://yume.wiki/"> YumeWiki </a>
+      2023, 2024 are licensed under
+      <a href="licenses/general/CC-BY-NC-SA-4.0.txt"> CC BY-NC-SA 4.0 </a>
     </p>
 
     <p>
-      Fantasque Sans Mono © Jany Belluz 2013-2016 - 
+      Fantasque Sans Mono © Jany Belluz 2013-2016 is licensed under the
       <a href="licenses/Fantasque-Sans-Mono/SIL Open Font License.txt">
         Open Font License 1.1
       </a>
     </p>
 
     <p>
-      This website's 
+      This website's
       <a href="https://codeberg.org/MymeType/personal-website">
-        source code
-      </a> 
-      is dedicated to the public domain under the Unlicense. You can view a 
-      copy 
-      <a href="licenses/general/Unlicense.txt">
-        here</a>.
+        source code files</a
+      >
+      (where specified in <a href="./lppl-files.txt">lppl-files.txt</a>) is
+      licensed under the
+      <a href="licenses/general/LPPL-1.3c.txt"
+        >LaTeX Project Public License v1.3c</a
+      >
     </p>
-
   </body>
-
 </html>
