--- a/src/index.html
+++ b/src/index.html
@@ -1,75 +1,83 @@
-<!-- 
-  TODO:
-  - Make Axel head replacement so that it can be licensed under CC0 1.0 
+<!--
+  ## src/index.html
+  ## Copyright 2025 Alexandru Mihai Buzduc
+  #
+  # This work may be distributed and/or modified under the
+  # conditions of the LaTeX Project Public License, either version 1.3c
+  # of this license or (at your option) any later version.
+  # The latest version of this license is in
+  #   http://www.latex-project.org/lppl.txt
+  # and version 1.3 or later is part of all distributions of LaTeX
+  # version 2005/12/01 or later.
+  #
+  # This work has the LPPL maintenance status `maintained'.
+  #
+  # The Current Maintainer of this work is Alexandru Mihai Buzduc.
+  #
+  # This work consists of the files listed in src/lppl-files.txt.
 -->
 
 <!DOCTYPE html>
 
 <html lang="en">
-
   <head>
+    <meta charset="UTF-8" />
 
-    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>guest@mymetype.gay / $</title>
 
-    <title>
-      guest@mymetype.gay / $
-    </title>
+    <link href="style.css" rel="stylesheet" type="text/css" media="all" />
 
-    <link href="style.css" rel="stylesheet" type="text/css" media="all">
+    <link
+      rel="stylesheet"
+      href="https://furryring.neocities.org/onionring.css"
+    />
 
-    <link rel="stylesheet" href="https://furryring.neocities.org/onionring.css">
+    <link rel="me" href="https://furry.engineer/@mymetype" />
 
-    <link rel="me" href="https://furry.engineer/@mymetype">
-
-    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
-
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
   </head>
 
   <body>
-
-    <p class="warning">WARNING: The website is being actively reworked and 
-    frequent changes are to be expected!</p>
-
-    <img src="images/axel-mono-head.png" 
-    onmouseover="this.src='images/axel-teal-head.png';" 
-    onmouseout="this.src='images/axel-mono-head.png';" 
-    onclick="this.src='images/axel-teal-head-happy.png';">
+    <img
+      src="images/axel-mono-head.png"
+      onmouseover="this.src='images/axel-teal-head.png';"
+      onmouseout="this.src='images/axel-mono-head.png';"
+      onclick="this.src='images/axel-teal-head-happy.png';"
+    />
 
     <h1>MymeType - マイムタイプ - /maɪmtaɪp/</h1>
-    
-    <h2>
-      Main pages
-    </h2>
+
+    <h2>Main pages</h2>
 
     <p>
       #########
-      <br>
+      <br />
       #<a href="gallery.html">GALLERY</a>#
-      <br>
+      <br />
       #########
     </p>
 
     <p>
       ##########
-      <br>
+      <br />
       #<a href="my-works.html">MY WORKS</a>#
-      <br>
+      <br />
       ##########
     </p>
 
     <p>
       #########
-      <br>
+      <br />
       #<a href="socials.html">SOCIALS</a>#
-      <br>
+      <br />
       #########
     </p>
 
     <p>
       ######
-      <br>#<a href="blog/index.html">BLOG</a>#<br>
+      <br />#<a href="blog/index.html">BLOG</a>#<br />
       ######
     </p>
 
@@ -83,37 +91,35 @@
     </p>
     -->
 
-    <h2>
-      Webrings
-    </h2>
+    <h2>Webrings</h2>
 
-    <div id='furryring'>
+    <div id="furryring">
+      <script
+        type="text/javascript"
+        src="https://furryring.neocities.org/onionring-variables.js"
+      ></script>
 
-      <script type="text/javascript" 
-      src="https://furryring.neocities.org/onionring-variables.js"></script>
-
-      <script type="text/javascript" 
-      src="https://furryring.neocities.org/onionring-widget.js"></script>
-
+      <script
+        type="text/javascript"
+        src="https://furryring.neocities.org/onionring-widget.js"
+      ></script>
     </div>
 
-    <h2>
-      My button
-    </h2>
+    <h2>My button</h2>
 
     <p>
-      <img src="images/mymetype-button.png" 
-      onclick="alert('you\'re already on this website you DUMBASS!!! /silly');">
-      <br>
+      <img
+        src="images/mymetype-button.png"
+        onclick="alert('you\'re already on this website you DUMBASS!!! /silly');"
+      />
+      <br />
       <!---->
       <small class="caption">
-        (This 88x31 button is licensed under the terms of the 
-        <a href="licenses/general/CC0-1.0.txt">
-          CC0 1.0
-        </a> 
+        (This 88x31 button is licensed under the terms of the
+        <a href="licenses/general/CC0-1.0.txt"> CC0 1.0 </a>
         license. Feel free to add it to your site and make it link back here!)
       </small>
-      <br>
+      <br />
       <textarea readonly rows="3" cols="71">
 <a href="https://mymetype.neocities.org">
   <img src="https://mymetype.neocities.org/images/mymetype-button.png">
@@ -121,93 +127,89 @@
       </textarea>
     </p>
 
-    <h2>
-      Neat people (for various reasons)
-    </h2>
+    <h2>Neat people (for various reasons)</h2>
 
     <p>
       <a href="https://spax.zone/">
-        <img src="https://spax.zone/buttons/spaxdotzone.gif">
+        <img src="https://spax.zone/buttons/spaxdotzone.gif" />
       </a>
       <a href="https://mishamallow.neocities.org" target="_blank">
-        <img src="https://mishamallow.neocities.org/buttons/mishamallow_1.gif" 
-        alt="Mishamallow">
+        <img
+          src="https://mishamallow.neocities.org/buttons/mishamallow_1.gif"
+          alt="Mishamallow"
+        />
       </a>
     </p>
 
-    <h2>
-      Misc buttons
-    </h2>
+    <h2>Misc buttons</h2>
 
     <p>
       <a href="https://www.mabsland.com/Adoption.html">
-        <img src="images/Censor_14c.gif" width="88" height="31">
-      </a> 
-      <a href="https://www.kernel.org/pub/linux/kernel/v2.1/">
-        <img src="images/linuxnow.jpg">
-      </a> 
-      <a href="https://massgrave.dev/">
-        <img src="images/windows.gif">
-      </a> 
-      <a href="https://neocities.org">
-        <img src="images/neocities_made.gif">
-      </a> 
-      <a href="https://ohhey.gay">
-        <img src="images/gaypride.gif">
-      </a> 
-      <a href="https://github.com/ungoogled-software/ungoogled-chromium">
-        <img src="images/best_chrome.gif">
-      </a> 
-      <a href="https://creativecommons.org/licenses/list">
-        <img src="images/cc.primary.srr.gif">
-      </a> 
-      <a href="https://www.ebay.com/sch/i.html?_nkw=lenovo%20thinkpad%20w541">
-        <img src="images/bestvieweddesktop.gif">
-      </a> 
-      <a href="https://eggramen.neocities.org/creations/edits/buttons">
-        <img src="images/code-editor_button2multi.gif">
-      </a> 
-      <a href="https://gentoo.org">
-        <img src="images/gentoo_button.png">
-      </a> 
-      <a href="https://badge.les.bi">
-        <img title="bi"  src="https://badge.les.bi/88x31/bi.svg">
-      </a> 
-      <a href="https://en.wikifur.com/wiki/MymeType">
-        <img src="images/twopaws.png">
+        <img src="images/Censor_14c.gif" width="88" height="31" />
       </a>
-
+      <a href="https://www.kernel.org/pub/linux/kernel/v2.1/">
+        <img src="images/linuxnow.jpg" />
+      </a>
+      <a href="https://massgrave.dev/">
+        <img src="images/windows.gif" />
+      </a>
+      <a href="https://neocities.org">
+        <img src="images/neocities_made.gif" />
+      </a>
+      <a href="https://ohhey.gay">
+        <img src="images/gaypride.gif" />
+      </a>
+      <a href="https://github.com/ungoogled-software/ungoogled-chromium">
+        <img src="images/best_chrome.gif" />
+      </a>
+      <a href="https://creativecommons.org/licenses/list">
+        <img src="images/cc.primary.srr.gif" />
+      </a>
+      <a href="https://www.ebay.com/sch/i.html?_nkw=lenovo%20thinkpad%20w541">
+        <img src="images/bestvieweddesktop.gif" />
+      </a>
+      <a href="https://eggramen.neocities.org/creations/edits/buttons">
+        <img src="images/code-editor_button2multi.gif" />
+      </a>
+      <a href="https://gentoo.org">
+        <img src="images/gentoo_button.png" />
+      </a>
+      <a href="https://badge.les.bi">
+        <img title="bi" src="https://badge.les.bi/88x31/bi.svg" />
+      </a>
+      <a href="https://en.wikifur.com/wiki/MymeType">
+        <img src="images/twopaws.png" />
+      </a>
     </p>
 
     <p>
-      Fantasque Sans Mono © Jany Belluz 2013-2016 - 
+      Fantasque Sans Mono © Jany Belluz 2013-2016 is licensed under the
       <a href="licenses/Fantasque-Sans-Mono/SIL Open Font License.txt">
         Open Font License 1.1
       </a>
     </p>
 
-    <!--
-      Switch license to CC0 1.0 once replacement is done
-    -->
     <p>
-      Axel headshot header images © MymeType 2025 - 
-      <a href="licenses/general/CC-BY-SA-4.0.txt">
-        CC BY-SA 4.0
-      </a>
+      Old Axel headshot header images © MymeType 2025 are licensed under
+      <a href="licenses/general/CC-BY-SA-4.0.txt"> CC BY-SA 4.0 </a>
     </p>
 
     <p>
-      This website's 
+      This website's
       <a href="https://codeberg.org/MymeType/personal-website">
-        source code
-      </a> 
-      is dedicated to the public domain under the Unlicense. You can view a 
-      copy 
-      <a href="licenses/general/Unlicense.txt">
-        here</a>.
+        source code files</a
+      >
+      (where specified in <a href="./lppl-files.txt">lppl-files.txt</a>) is
+      licensed under the LaTeX Project Public License v1.3c. You can view a copy
+      <a href="licenses/general/LPPL-1.3c.txt"> here</a>.
     </p>
 
-    <link href="https://melonking.net/styles/flood.css" rel="stylesheet" type="text/css" media="all" />
+    <link
+      href="https://melonking.net/styles/flood.css"
+      rel="stylesheet"
+      type="text/css"
+      media="all"
+    />
 
     <script src="https://melonking.net/scripts/flood.js"></script>
 
@@ -216,7 +218,5 @@
       flood.textureWidth = 256;
       flood.textureHeight = 256;
     </script>
-
   </body>
-
 </html>
