--- a/src/not_found.html
+++ b/src/not_found.html
@@ -1,50 +1,65 @@
+<!--
+  ## src/not_found.html
+  ## Copyright 2025 Alexandru Mihai Buzduc
+  #
+  # This work may be distributed and/or modified under the
+  # conditions of the LaTeX Project Public License, either version 1.3c
+  # of this license or (at your option) any later version.
+  # The latest version of this license is in
+  #   http://www.latex-project.org/lppl.txt
+  # and version 1.3 or later is part of all distributions of LaTeX
+  # version 2005/12/01 or later.
+  #
+  # This work has the LPPL maintenance status `maintained'.
+  #
+  # The Current Maintainer of this work is Alexandru Mihai Buzduc.
+  #
+  # This work consists of the files listed in src/lppl-files.txt.
+-->
+
 <!DOCTYPE html>
 
 <html lang="en">
-
   <head>
+    <meta charset="UTF-8" />
 
-    <meta charset="UTF-8">
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>guest@mymetype.gay / $</title>
 
-    <link href="style.css" rel="stylesheet" type="text/css" media="all">
+    <link href="style.css" rel="stylesheet" type="text/css" media="all" />
 
-    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
-
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
   </head>
 
   <body>
-
     <h1>404 - NOT FOUND</h1>
 
     <p>
       ######
-      <br>
+      <br />
       #<a href="index.html">HOME</a>#
-      <br>
+      <br />
       ######
     </p>
-    
+
     <p>
-      Fantasque Sans Mono © Jany Belluz 2013-2016 - 
+      Fantasque Sans Mono © Jany Belluz 2013-2016 is licensed under the
       <a href="licenses/Fantasque-Sans-Mono/SIL Open Font License.txt">
         Open Font License 1.1
       </a>
     </p>
 
     <p>
-      This website's 
+      This website's
       <a href="https://codeberg.org/MymeType/personal-website">
-        source code
-      </a> 
-      is dedicated to the public domain under the Unlicense. You can view a 
-      copy 
-      <a href="licenses/general/Unlicense.txt">
-        here</a>.
+        source code files</a
+      >
+      (where specified in <a href="./lppl-files.txt">lppl-files.txt</a>) is
+      licensed under the
+      <a href="licenses/general/LPPL-1.3c.txt"
+        >LaTeX Project Public License v1.3c</a
+      >
     </p>
-
   </body>
 </html>
