Update links to source code repository from Codeberg to GitHub

--- a/src/index.html
+++ b/src/index.html
@@ -105,7 +105,7 @@
       ></script>
     </div>
 
-    <h2>My button</h2>
+    <h2>Website button</h2>
 
     <p>
       <img
@@ -113,12 +113,6 @@
         onclick="alert('you\'re already on this website you DUMBASS!!! /silly');"
       />
       <br />
-      <!---->
-      <small class="caption">
-        (This 88x31 button is licensed under the terms of the
-        <a href="licenses/general/CC0-1.0.txt"> CC0 1.0 </a>
-        license. Feel free to add it to your site and make it link back here!)
-      </small>
       <br />
       <textarea readonly rows="3" cols="71">
 <a href="https://mymetype.neocities.org">
@@ -190,33 +184,40 @@
     </p>
 
     <p>
+      Website button dedicated to the public domain under
+      <a href="./licenses/general/CC0-1.0.txt">CC0 1.0</a>
+    </p>
+
+    <p>
       Old Axel headshot header images © MymeType 2025 are licensed under
       <a href="licenses/general/CC-BY-SA-4.0.txt"> CC BY-SA 4.0 </a>
     </p>
 
     <p>
       This website's
-      <a href="https://codeberg.org/MymeType/personal-website">
+      <a href="https://github.com/MymeType/personal-website">
         source code files</a
       >
       (where specified in <a href="./lppl-files.txt">lppl-files.txt</a>) is
-      licensed under the LaTeX Project Public License v1.3c. You can view a copy
-      <a href="licenses/general/LPPL-1.3c.txt"> here</a>.
+      licensed under the
+      <a href="licenses/general/LPPL-1.3c.txt"
+        >LaTeX Project Public License v1.3c</a
+      >
+
+      <link
+        href="https://melonking.net/styles/flood.css"
+        rel="stylesheet"
+        type="text/css"
+        media="all"
+      />
+
+      <script src="https://melonking.net/scripts/flood.js"></script>
+
+      <script>
+        flood.texture = "images/flood-teal.png";
+        flood.textureWidth = 256;
+        flood.textureHeight = 256;
+      </script>
     </p>
-
-    <link
-      href="https://melonking.net/styles/flood.css"
-      rel="stylesheet"
-      type="text/css"
-      media="all"
-    />
-
-    <script src="https://melonking.net/scripts/flood.js"></script>
-
-    <script>
-      flood.texture = "images/flood-teal.png";
-      flood.textureWidth = 256;
-      flood.textureHeight = 256;
-    </script>
   </body>
 </html>
