--- a/src/misc/template-page.html
+++ b/src/misc/template-page.html
@@ -70,7 +70,7 @@
 
     <p>
       This website's
-      <a href="https://codeberg.org/MymeType/personal-website">
+      <a href="https://github.com/MymeType/personal-website">
         source code files</a
       >
       (where specified in <a href="./lppl-files.txt">lppl-files.txt</a>) is
