Enhance accessibility and documentation by adding alt attributes to images, update README with historical context and removing outdated changelog page

--- a/src/gallery.html
+++ b/src/gallery.html
@@ -37,19 +37,28 @@
 
     <h2>My art</h2>
 
-    <img src="images/axel-refsheet.png" width="600px" height="100%" />
+    <img
+      src="images/axel-refsheet.png"
+      width="600px"
+      height="100%"
+      alt="Old Axel refsheet"
+    />
 
     <p>
       <small class="caption">Old Axel refsheet</small>
     </p>
 
-    <img src="images/axel-hi.png" />
+    <img src="images/axel-hi.png" alt="Old Axel waving" />
 
     <p>
       <small class="caption">Old Axel waving</small>
     </p>
 
-    <img src="images/axel-first-design.jpg" width="600px" />
+    <img
+      src="images/axel-first-design.jpg"
+      width="600px"
+      alt="Earliest ever design of Axel (from 2023)"
+    />
 
     <p>
       <small class="caption"
@@ -60,7 +69,11 @@
       >
     </p>
 
-    <img src="images/axel-old-drawing.jpg" width="600px" />
+    <img
+      src="images/axel-old-drawing.jpg"
+      width="600px"
+      alt="Drawing featuring older design from early 2024"
+    />
 
     <p>
       <small class="caption"
