--- a/src/my-works.html
+++ b/src/my-works.html
@@ -40,25 +40,25 @@
       (Associate Developer)
     </h2>
 
-    <img src="images/640px-DarkBunker_0.126.png" />
+    <img src="images/640px-DarkBunker_0.126.png" alt="Dark Bunker" />
 
     <p>
       <a href="https://yume.wiki/2kki/Dark_Bunker"> Dark Bunker </a>
     </p>
 
-    <img src="images/640px-The_pansy_path_A.png" />
+    <img src="images/640px-The_pansy_path_A.png" alt="The Pansy Path" />
 
     <p>
       <a href="https://yume.wiki/2kki/The_Pansy_Path"> The Pansy Path </a>
     </p>
 
-    <img src="images/Clock_World.png" />
+    <img src="images/Clock_World.png" alt="Clock World" />
 
     <p>
       <a href="https://yume.wiki/2kki/Clock_World"> Clock World </a>
     </p>
 
-    <img src="images/Restored_Vanta_120.png" />
+    <img src="images/Restored_Vanta_120.png" alt="Restored Vantablack World" />
 
     <p>
       <a href="https://yume.wiki/2kki/Restored_Vantablack_World">
@@ -66,7 +66,7 @@
       </a>
     </p>
 
-    <img src="images/Rainbow_hell.png" width="640px" />
+    <img src="images/Rainbow_hell.png" width="640px" alt="Rainbow Hell" />
 
     <p>
       <a href="https://yume.wiki/2kki/Rainbow_Hell"> Rainbow Hell </a>
